2011-07-22  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/xmlParse.pm: Delete also the "printers_byname" fields
	  in clones of driver entries during the overview. Otherwise it comes
	  to memory explosions if only a few big driver entries get added to
	  the database. Now scalability seems to work well.

2011-07-20  Daniel Dressler <danieru.dressler@gmail.com>

	* xmlParse.pm: noXml printers now default to color == true.

2011-07-20  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: now uses xmlParse version 2 for combos

	* phonebook.pm: comboppdentry and cmd_pdf are now copied for
	  combos.

	* xmlParse.pm: renamed cleanID to getCleanId. renamed
	  generalGroups to setGeneralGroups. Fixed getDriverPrinter().
	  Fixed two typos in  getPrinterSpecificDriver(). Brought noXml
	  printer data generation into own function. Fixed isPairSupported
	  now works if only one xml contains printer/driver entries.
	  Added getXmlPath() which supports getting the paths for xmls
	  in the library path and in the working directory.
	  Brought driver and printer caching into its own function, used
	  by parseCombo. Provided the xmlParse object stays alive combo
	  generation will be cpu bound. Added support in parseCombo for
	  noXml printers.

2011-07-20  Daniel Dressler <danieru.dressler@gmail.com>

	* xmlParse.pm: Changed default combo data to use more
	  rebust user detection. Added support for ppdentry in
	  driver's list of printers. Made this ppdentry get included
	  in combos under the key comboppentry.

	* phonebook.pm: Add the obsolete key to the list of keys 
	  copied from driver data to combos.

	* DB.pm: put back generalentries() I removed had removed it
	  thinking that it was obsolete. Also changed get_combo_data
	  to use the new error logging key.

2011-07-19  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/xmlParse.pm: Fixed the "extended overview" CUPS
	  overview mode. It did not set the $printer->{'drivers'} keys.
