@@ -1,5 +1,15 @@
 2011-07-22  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* foomatic-ppdfile.in: Removed unneeded creation of the overview
+	  if foomatic-ppdfile is called with a printer for which there is no
+	  XML file. Formerly, as printer/driver pairs with a printer without
+	  XML entry were not valid, the use of a non-listed printer was
+	  assumed to be a typo and a case-insensitive search in the database
+	  was done. Now an invalid printer input leads to an error message
+	  when requesting the combo, which is much faster, both for getting
+	  a PPD for a non-listed valid printer and an error message for an
+	  invalid printer.
+
 	* lib/Foomatic/xmlParse.pm: Delete also the "printers_byname" fields
 	  in clones of driver entries during the overview. Otherwise it comes
 	  to memory explosions if only a few big driver entries get added to
